# microservices/contracts/http/jobs.openapi.json
@@ -7152,6 +7152,27 @@
               }
             ]
           },
+          "legacy_cv_id": {
+            "anyOf": [
+              {
+                "anyOf": [
+                  {
+                    "type": "integer",
+                    "minimum": 1,
+                    "maximum": 9007199254740991
+                  },
+                  {
+                    "type": "string",
+                    "pattern": "^[1-9][0-9]{0,15}$",
+                    "format": "jobfind-id"
+                  }
+                ]
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
           "job_id": {
             "anyOf": [
               {
